add image scanning section

--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -51,5 +51,7 @@ include::common/smartstate.adoc[]
 
 include::topics/provider-ose-add-container.adoc[]
 
+[[scanning]]
+= Container Image Scanning
 
-
+include::topics/image-scanning.adoc[]
