--- a/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/miq/index.adoc
@@ -45,3 +45,8 @@ include::common/smartstate.adoc[]
 = Adding the OpenShift Deployment as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
+
+[[scanning]]
+= Container Image Scanning
+
+include::topics/image-scanning.adoc[]
