added note about starting mm provider with service option

--- a/doc-Managing_Providers/topics/Middleware_Providers.adoc
+++ b/doc-Managing_Providers/topics/Middleware_Providers.adoc
@@ -24,9 +24,15 @@ After initial installation and creation of a {product-title} environment, add a 
 . Accept the default *Zone*.
 . Under *Endpoints*, configure the following for the middleware provider:
 .. Select a *Security protocol* method to specify how to authenticate to the provider:
-** *SSL* (SSL with validation) – Authenticate to the provider securely using a trusted certificate authority. This requires that you have already configured your public and private keys in the *_/client-secrets_* directory as either two .PEM files or as a single .pkcs12 file.
-** *SSL trusting custom CA*  – Authenticate to the provider with a self-signed certificate.  For this option, copy your certificate’s text to the *Trusted CA Certificates* field in .PEM format.
-** *SSL without validation* – Authenticate to the provider insecurely (not recommended).  
++
+[NOTE]
+====
+To use SSL to authenticate the provider, the middleware management server must be started with the service option `HAWKULAR_USE_SSL=true`.
+====
++
+** *SSL* (SSL with validation) – Authenticate the provider securely using a trusted certificate authority. This requires that you have already configured your public and private keys in the *_/client-secrets_* directory as either two .PEM files or as a single .pkcs12 file.
+** *SSL trusting custom CA*  – Authenticate the provider with a self-signed certificate.  For this option, copy your certificate’s text to the *Trusted CA Certificates* field in .PEM format.
+** *SSL without validation* – Authenticate the provider insecurely (not recommended).  
 ** *Non-SSL*  – Select if you do not want to use SSL.
 .. Enter the *Hostname* or IPv4 or IPv6 address of the machine where you installed the middleware manager.
 +
