--- a/doc-Configuring_High_Availability/cfme/master.adoc
+++ b/doc-Configuring_High_Availability/cfme/master.adoc
@@ -17,6 +17,8 @@ include::common/attributes/cfme.adoc[]
 include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
+//Updating_HA is only in CFME as it's concerning subscriptions.
+include::topics/Updating_HA.adoc[]
 
 
 
