--- a/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
@@ -15,16 +15,21 @@ For reporting of daily optimization data, incomplete days (days with less
 than 24 hourly data points from midnight to midnight) that are at the
 beginning or end of the requested interval are excluded. Days with less
 than 24 hourly data points would be inaccurate and including them would
-skew trend lines. Therefore, the *Optimize* page requires at least two full
-days of daily data because all the charted values are derived from trend
-calculations and that requires at least two data points
+skew trend lines, therefore, the *Optimize* page requires at least two full
+days of daily data. All charted values are derived from trend
+calculations that requires at least two data points.
 ====
 
+[[utilization-trends]]
+== Utilization Trends
+
+{product-title} allows you to view the resource utilization of your clusters, providers, and datastores. You can choose from summary,
+details, or report view.
 
 [[viewing-utilization-trend-summary]]
-=== Viewing Utilization Trend Summary
+=== Viewing a Utilization Trend Summary
 
-This procedure shows you how to view utilization trend summary.
+This procedure shows you how to view a utilization trend summary.
 
 . Navigate to menu:Optimize[Utilization].
 . Click *Summary* if it is not already selected.
@@ -82,9 +87,9 @@ report which can be downloaded for further analysis.
 [[prerequisites]]
 === Prerequisites
 
-* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. To enable data collection in {product-title}, see the following sections:
-** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/Capacity_Planning#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
-** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/capacity_planning#data_collected[Data Collected]
+* Bottleneck reports use the same mechanism to gather data as capacity and utilization reports. To enable data collection in {product-title}, see the following sections:
+** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/Capacity_Planning#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
+** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/capacity_planning#data_collected[Capacity and Utilization Data Collected]
 * Additionally, configure your {product-title} for collecting capacity and utilization reports for clusters and datastores by following this procedure:
 .. From the settings menu, select *Configuration*.
 .. Select *Region* from the *Settings* tab in the left pane of the appliance. 
@@ -96,9 +101,9 @@ report which can be downloaded for further analysis.
 ====
 +
 .. Click *Save*.
-* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat Enterprise Linux OpenStack Platform provider:
-** For Red Hat Enterprise Virtualization: link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/capacity_planning#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization]
-** For Red Hat Enterprise Linux OpenStack Platform: link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/capacity_planning#data_collection_for_osp[Data Collection for Red Hat Enterprise Linux OpenStack Platform]
+* For bottleneck reports to work as expected, the data collection for capacity and utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat Enterprise Linux OpenStack Platform provider:
+** For Red Hat Enterprise Virtualization: link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/capacity_planning#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization]
+** For Red Hat Enterprise Linux OpenStack Platform: link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/capacity_planning#data_collection_for_osp[Data Collection for Red Hat Enterprise Linux OpenStack Platform]
 
 [NOTE]
 ====
