--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Datastores.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_Datastores.adoc
@@ -6,8 +6,8 @@ To perform a SmartState analysis, the datastore is accessible from a running hos
 
 [NOTE]
 ====
-Be aware that executing a SmartState Analysis on a datastore from the console takes a while to return data on the content.
-If Capacity and Utilization roles are enabled, {product-title} performs the analysis automatically on a scheduled basis approximately every 24 hours.
+Be aware that executing a SmartState analysis on a datastore from the console takes a while to return data on the content.
+If capacity and utilization roles are enabled, {product-title} performs the analysis automatically on a scheduled basis approximately every 24 hours.
 ====
 
 . Navigate to menu:Compute[Infrastructure > Datastores].
