fixed formatting issue with global copy procedure

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2769,7 +2769,9 @@ Configure a {product-title} instance to act as a remote copy from which data wil
 
 Configure a {product-title} instance to act as the global copy to which data is replicated from the remote copies.
 
-image:add-subscription.png[Add Subscription]. Log in to the appliance as the *root* user.
+image:add-subscription.png[Add Subscription]
+
+. Log in to the appliance as the *root* user.
 . Enter `appliance_console`, and press *Enter*.
 . Click *Replication*.
 . Select *Global* from the *Type* list.
