Few additional modifications

--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -18,9 +18,9 @@ creation of capacity and utilization.
 
 * The Capacity & Utilization Coordinator role checks to see if it is
   time to collect data, somewhat like a scheduler. If it is time, a job
-  is queued for the capacity and utilization data collector. The
-  coordinator role is required to complete capacity and utilization
-  data collection. If more than one Server in a specific zone has this
+  is queued for the Capacity & Utilization Data Collector. The
+  Coordinator role is required to complete capacity and utilization
+  data collection. If more than one server in a specific zone has this
   role, only one will be active at a time.
 
 * The Capacity & Utilization Data Collector performs the actual
@@ -41,7 +41,7 @@ include::common/cap-util-assign-server-roles.adoc[]
 
 [NOTE]
 ====
-In addition to setting the server role, you must also select which clusters and datastores to collect data for. For more information, see General Configuration. You must have super administrator rights to edit these settings.
+In addition to setting the server role, you must also select which clusters and datastores to collect data for. For more information, see _General Configuration_. You must have super administrator rights to edit these settings.
 ====
 
 [[adding-database-credentials-for-data-collection]]
@@ -54,7 +54,7 @@ After creating the new user, add the user's credentials to the settings for the 
 . In the *Credentials* area, click *C & U Database*.
 . Type in the credentials for the new database user you created.
 . Click *Save*.
-. Restart the capacity and utilization data collector.
+. Restart the Capacity and Utilization Data Collector.
 
 [[data_collection_for_rhev_33_34]]
 === Data Collection for Red Hat Enterprise Virtualization
@@ -304,9 +304,9 @@ capacity and utilization charts under the menu:Compute[Infrastructure] tab.
 ====
 
 [[capacity-and-utilization-charts-for-host,-clusters,-and-virtual-machines]]
-==== Capacity and Utilization Charts for Host, Clusters, and Virtual Machines
+==== Capacity and Utilization Charts for Hosts, Clusters, and Virtual Machines
 
-.Capacity and Utilization Charts for Host, Clusters, and Virtual Machines
+.Capacity and Utilization Charts for Hosts, Clusters, and Virtual Machines
 [width="100%",cols="3,1,1,1,1,1,1,1",options="header",]
 |=======================================================================
 | Resource Type | CPU Usage | CPU States | Disk I/O | Memory Usage | Network I/O | Running VMS | Running Hosts
@@ -348,7 +348,7 @@ endif::cfme[]
 [[chart-features]]
 === Capacity and Utilization Chart Features
 
-Capacity and utilization charts for host, clusters, virtual machines, and datastore provides its own set of special features including zooming in on a chart and shortcut menus.
+Capacity and utilization charts for hosts, clusters, virtual machines, and datastores provides its own set of special features including zooming in on a chart and shortcut menus.
 
 [[zooming-into-a-chart]]
 ==== Zooming into a Chart
@@ -384,17 +384,20 @@ Capacity and utilization charts for host, clusters, virtual machines, and datast
   its details.
 
 
-ifdef::cfme[]
-For more information about data optimization, utilization trends and bottlenecks, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/managing_infrastructure_and_inventory/sect_datastores#data_optimization_features[Data Optimization Features] in _Managing Infrastructure and Inventory_.
-endif::cfme[]
-
 [[planning-where-to-put-a-new-virtual-machine]]
 === Planning Where to Put a New Virtual Machine
 
 You can use the data collected in the VMDB to plan where you can put 
 additional virtual machines. {product-title} allows you to
 use a reference virtual machine as an example to plan on which hosts and 
-clusters you can place a new virtual machine.
+clusters you can place a new virtual machine. 
+
+ifdef::cfme[]
+[NOTE]
+====
+For information about utilization trends and identifying bottlenecks in your environment, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/managing_infrastructure_and_inventory/sect_datastores#data_optimization[Data Optimization] in _Managing Infrastructure and Inventory_.
+====
+endif::cfme[]
 
 . Navigate to menu:Optimize[Planning].
 . From *Reference VM Selection*, use the dropdowns to select the virtual
