--- a/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
@@ -1,17 +1,18 @@
-[[data-optimization-features]]
-= Data Optimization Features
-
-[[optimization]]
-== Optimization
+[[data-optimization]]
+= Data Optimization
 
 {product-title} optimization functions allow you to view
 utilization trends, and identify and project bottlenecks in your
 environment. In addition, you can predict where you have capacity for
-additional virtual machines.
+additional virtual machines, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/deployment_planning_guide/#planning-where-to-put-a-new-virtual-machine[Planning Where to Put a New Virtual Machine] in the _Deployment Planning Guide_.
 
 [NOTE]
 ====
-For reporting of daily optimization data, incomplete days (days with less
+* To access the utilization and bottleneck report features, you will first need to enable data collection in {product-title}; see the following sections in the _Deployment Planning Guide_:
+** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/Capacity_Planning#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles]
+** link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/capacity_planning#data_collected[Capacity and Utilization Data Collected]
+
+* For reporting of daily optimization data, incomplete days (days with less
 than 24 hourly data points from midnight to midnight) that are at the
 beginning or end of the requested interval are excluded. Days with less
 than 24 hourly data points would be inaccurate and including them would
