Updated the content on storage managers to include the new Amazon EBS storage manager.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Backup.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_Backup.adoc
@@ -1,11 +1,11 @@
-[[creating_a_cinder_backup]]
+[[creating_a_backup]]
 = Creating a Backup of a Volume
 
 You can create a backup of a volume to protect against data loss, and restore it in the future.
 
 [IMPORTANT]
 ====
-The `openstack-cinder-backup` service must be enabled on the OpenStack Block Storage manager to create a volume backup.
+For OpenStack Block Storage managers, the `openstack-cinder-backup` service must be enabled on the OpenStack Block Storage manager to create a volume backup.
 ====
 
 To create a backup of a volume:
