--- a/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_Volumes.adoc
@@ -1,7 +1,7 @@
-[[deleting_cinder_volumes]]
+[[deleting_volumes]]
 = Deleting a Volume
 
-To delete a volume from the OpenStack Block Storage manager:
+To delete a volume from a storage manager:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to delete.
