--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detaching_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detaching_Volumes.adoc
@@ -1,7 +1,7 @@
-[[detaching_cinder_volumes]]
+[[detaching_volumes]]
 = Detaching a Volume from an Instance
 
-To detach a volume from an OpenStack instance:
+To detach a volume from an instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to detach.
