--- a/doc-Managing_Infrastructure_and_Inventory/topics/Attaching_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Attaching_Volumes.adoc
@@ -1,6 +1,6 @@
-[[attaching_cinder_volumes]]
+[[attaching_volumes]]
 = Attaching a Volume to an Instance
 
-To attach a volume to an OpenStack instance:
+To attach a volume to an instance:
 
 include::common/openstack/cinder-instance-attach.adoc[]
