--- a/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
@@ -1,23 +1,30 @@
 [[volumes]]
 = Volumes
 
-A volume is a block storage device that you can attach to an instance. In the *Volumes* tab, you can add a new cloud volume, or list all cloud volumes with information including each volume's _Name_, _Size_, _Status_, _Type_, if it is _Bootable_, _Availability Zones_, and _Cloud Provider_. Click on a cloud volume to see a summary of the volume. On that screen, you can see which instance is currently using the volume under Relationships, and also see its snapshot. More importantly, you can attach or detach a cloud volume to an instance, and edit or delete a selected volume.
+A volume is a block storage device that you can attach to or detach from an instance to manage the storage available to that instance. Volumes are managed through storage managers, which are added automatically to {product-title} when the corresponding provider is added.
 
 :leveloffset: 2
-include::Adding_New_Cloud_Volume.adoc[]
-
-
-:leveloffset: 2
-include::Attaching_Cloud_Volume_to_an_Instance.adoc[]
-
+include::Creating_Cloud_Volumes.adoc[]
 
 :leveloffset: 2
-include::Detaching_Cloud_Volume_from_an_Instance.adoc[]
-
-
-:leveloffset: 2
-include::Editing_Cloud_Volume.adoc[]
-
+include::Creating_a_Backup.adoc[]
 
 :leveloffset: 2
-include::Deleting_Cloud_Volumes.adoc[]
+include::Restoring_from_a_Cinder_Backup.adoc[]
+
+:leveloffset: 2
+include::Creating_a_Cinder_Volume_Snapshot.adoc[]
+
+:leveloffset: 2
+include::Attaching_Volumes.adoc[]
+
+:leveloffset: 2
+include::Detaching_Volumes.adoc[]
+
+:leveloffset: 2
+include::Editing_Volumes.adoc[]
+
+:leveloffset: 2
+include::Deleting_Volumes.adoc[]
+
+
