add escalate privilege toggle info

--- a/common/create-playbook-service-catalog-item.adoc
+++ b/common/create-playbook-service-catalog-item.adoc
@@ -19,6 +19,7 @@ Before creating an Ansible service, at least one repository, one playbook, and o
 .. Assign the appropriate *Machine Credentials* from the drop-down list. 
 .. Add *Cloud* or *Network Credentials* from the drop-down lists. 
 .. Choose the *Host* against which to run the service item. 
+.. Use the *Escalate Privilege* toggle switch to enable user privilege escalation. 
 .. Add key value pairs for *Variables* and their corresponding *Default Values*. 
 .. In the *Dialog* options, choose an existing dialog from the *Use Existing* drop-down list or select *Create New* to add a new dialog.
 . In the *Retirement* tab, set parameters for your catalog item to use by selecting values for the following:
@@ -27,6 +28,7 @@ Before creating an Ansible service, at least one repository, one playbook, and o
 .. Assign the appropriate *Machine Credentials* from the drop-down list. 
 .. Add *Cloud* or *Network Credentials* from the drop-down lists. 
 .. Choose the *Host* against which to run the service item. 
+.. Use the *Escalate Privilege* toggle switch to enable user privilege escalation. 
 .. Add key value pairs for *Variables* and their corresponding *Default Values*. 
 .. In the *Dialog* options, choose an existing dialog from the *Use Existing* drop-down list or select *Create New* to add a new dialog.
 . Click *Add*.
